--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.8.0",
+    "jest": "^27.4.7",
     "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --collect-coverage"
   }
 }
