--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pilvit/post-references",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "license" : "MIT",
   "dependencies": {
     "react": "^17.0.2"
@@ -22,6 +22,7 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
+    "build": "tsc -p tsconfig.json",
     "coverage": "jest --collect-coverage",
     "lint": "eslint .",
     "test": "jest"
