--- a/lib/package.json
+++ b/lib/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "^17.0.2"
   },
+  "main": "index.js",
   "scripts": {
     "coverage": "jest --collect-coverage",
     "lint": "eslint .",
