Add missing react-dom dependency

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@pilvit/post-references",
   "version": "0.1.0",
   "private": false,
-  "license" : "MIT",
+  "license": "MIT",
   "dependencies": {
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
