--- a/lib/package.json
+++ b/lib/package.json
@@ -8,7 +8,8 @@
     "url": "https://github.com/PilvIT/post-references"
   },
   "dependencies": {
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "main": "index.js",
   "scripts": {
